--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
     "@types/node": "^17.0.23",
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
+    "autoprefixer": "^10.4.4",
+    "gatsby-plugin-postcss": "^5.11.0",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.23",
     "typescript": "^4.6.3"
   }
 }
