--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@fontsource/open-sans": "^4.5.8",
     "babel-plugin-styled-components": "^2.0.6",
     "gatsby": "^4.11.1",
     "gatsby-plugin-styled-components": "^5.11.0",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "styled-components": "^5.3.5"
